2013-02-15  Andrey Lushnikov  <lushnikov@chromium.org>

        Web Inspector: implement smart braces functionality
        https://bugs.webkit.org/show_bug.cgi?id=109200

        Reviewed by Pavel Feldman.

        Fix eventSender.keyDown implementation to correctly process opening
        round brace symbol.

        * DumpRenderTree/chromium/TestRunner/src/EventSender.cpp:
        (WebTestRunner):
        (WebTestRunner::EventSender::keyDown):

2013-02-15  Jochen Eisinger  <jochen@chromium.org>

        Speculative build fix for chromium-win.

        Unreviewed build fix.

        Add declarations of the copy constructor and assignment operator to
        WebTestProxyBase, so VS doesn't try to generate them.

        * DumpRenderTree/chromium/TestRunner/public/WebTestProxy.h:

2013-02-15  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Port GCController to JSC C API
        https://bugs.webkit.org/show_bug.cgi?id=109690

        Reviewed by Benjamin Poulain.

        Rename TestRunner to TestRunnerQt to avoid conflict when
        including TestRunner.h in the future.

        Replaced QObject based GCController implementation with JSC C API
        based one.

        * DumpRenderTree/qt/DumpRenderTree.pro:
        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):
        (WebCore::DumpRenderTree::open):
        (WebCore::DumpRenderTree::initJSObjects):
        (WebCore::methodNameStringForFailedTest):
        * DumpRenderTree/qt/DumpRenderTreeQt.h:
        (WebCore::DumpRenderTree::testRunner):
        (DumpRenderTree):
        * DumpRenderTree/qt/GCControllerQt.cpp:
        (GCController::getJSObjectCount):
        * DumpRenderTree/qt/GCControllerQt.h: Removed.
        * DumpRenderTree/qt/TestRunnerQt.cpp:
        (TestRunnerQt::TestRunnerQt):
        (TestRunnerQt::reset):
        (TestRunnerQt::dumpNotifications):
        (TestRunnerQt::processWork):
        (TestRunnerQt::maybeDump):