@@ -1,3 +1,10 @@
+2013-02-15  Christophe Dumez  <ch.dumez@sisa.samsung.com>
+
+        Unreviewed. Update Yi Shen, Antonio Gomes and Laszlo Gombos'
+        emails on their behalf.
+
+        * Scripts/webkitpy/common/config/committers.py:
+
 2013-02-15  Andrey Lushnikov  <lushnikov@chromium.org>
 
         Web Inspector: implement smart braces functionality
